# termitalk

./: .gitignore  IMPLEMENTATION.md  LICENSE  README.md  SPECS.md  Tasks.md  pyproject.toml
termitalk/: __init__.py  __main__.py  audio.py  config.py  doctor.py  formatter.py  history.py  hotkey.py  injector.py  main.py  sounds.py  transcriber.py
