[project]
name = "termitalk"
version = "0.1.0"
description = "Local, privacy-focused speech-to-text for the terminal"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
keywords = ["speech-to-text", "terminal", "whisper", "cli", "voice"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]
dependencies = [
    "faster-whisper",
    "pynput",
    "sounddevice",
    "numpy",
    "silero-vad",
]

[project.urls]
Homepage = "https://github.com/roxoshi/termitalk"
Repository = "https://github.com/roxoshi/termitalk"
Issues = "https://github.com/roxoshi/termitalk/issues"

[project.optional-dependencies]
apple = ["mlx-whisper"]

[project.scripts]
termitalk = "termitalk.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
